[package]
name = "coretroller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cln-rpc = "0.1.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "0.2.22", features = ["full"] }
